<resources>
    <string name="app_name">Mini Store</string>
    <string name="welcome_back">Welcome back!!!</string>
    <string name="skip">Skip</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>

    <string name="nav_home">Home</string>
    <string name="nav_category">Category</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_cart">Cart</string>
    <string name="nav_account">Account</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_change_password">CHANGE PASSWORD</string>
    <string name="nav_login">Login</string>
    <string name="nav_logout">Logout</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_products">New Products</string>
    <string name="most_purchased">Most Purchased</string>
    <string name="all_products">All Products</string>
    <string name="menu_settings">Settings</string>
    <string name="nav_settings">Settings</string>

    <string name="_nav_statistics">Statistics</string>
    <string name="_nav_order">Order</string>
    <string name="_nav_product">Product</string>
    <string name="_nav_category">Category</string>
    <string name="_nav_brand">Brand</string>
    <string name="_nav_poster">Poster</string>
    <string name="_nav_user">User</string>

    <string name="_menu_insert">Insert</string>
    <string name="_menu_update">Update</string>
    <string name="_menu_delete">Delete</string>

    <string name="no_address">You don\'t have a shipping address yet. Please add at least one so we can ship to you!</string>

    <string name="order_status_rc">Requesting cancellation</string>

    <string name="calculation_unit">Calculation unit</string>

    <string name="address_book">Address book</string>

    <string name="username">Username</string>
    <string name="mandatory">Mandatory*</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="optional">Optional</string>
    <string name="sign_up">Sign up</string>

    <string name="forget_pass">Forget Password?</string>

    <string name="not_login">You are not logged in</string>
    <string name="please_sign_in">Please sign in to view your cart, rating and orders!</string>

    <string name="see_all">See all</string>

    <string name="total_pay">Total:</string>

    <string name="want_remove_pro">Are you sure you want to remove these products from your shopping cart?</string>
    <string name="remove">Remove</string>
    <string name="cancel">Cancel</string>

    <string name="want_remove_add">Are you sure you want to remove these addresses from your address book?</string>

    <string name="edit_prf">Edit profile</string>
    <string name="your_order">Your order</string>

    <string name="method">Please choose method</string>
    <string name="cont">Continue</string>
    <string name="exit">Exit</string>

    <string name="tap_change">Tap to change</string>
    <string name="save">Save</string>

    <string name="OTP_sented">OTP has been sent to your Gmail, please check again!</string>
    <string name="confirm">Confirm</string>

    <string name="enter_pass">Enter your new password</string>

    <string name="enter_username">Please enter your username</string>

    <string name="delivery_add">Delivery address</string>
    <string name="reason">Reason</string>
    <string name="enter_reason">Enter your reason...</string>
    <string name="request_return">Request return</string>
    <string name="refund_type">Refund type</string>
    <string name="total_refund">Total refund</string>
    <string name="detail_info">Detail information</string>
    <string name="province">Province</string>
    <string name="select_pro">Select province...</string>
    <string name="district">District</string>
    <string name="select_dis">Select district...</string>
    <string name="ward">Ward</string>
    <string name="select_ward">Select ward...</string>
    <string name="specific_address">Specific address</string>
    <string name="enter_house_num">Enter house number, street name ...</string>

    <string name="momo">MoMo e-wallet</string>
    <string name="cash">Cash</string>
    <string name="detail">Detail</string>
    <string name="description">Description</string>
    <string name="rate_and_comment">Rate and comment</string>
    <string name="may_need">You may also need</string>
    <string name="select_quan">Quantity:</string>
    <string name="add_to_card">Add to cart</string>

    <string name="check_out">Check out</string>
    <string name="choose_product">Choose product</string>
    <string name="view_add">View your address book</string>
    <string name="order_info">Order information</string>

    <string name="old_pass">Old password</string>
    <string name="new_pass">New password</string>
    <string name="confirm_pass">Confirm new password</string>

    <string name="new_add">Add new address</string>

    <string name="amount">The remaining amount:</string>

    <string name="image">Image</string>
    <string name="clear">Clear</string>

    <string name="report">REPORT</string>

    <string name="name">Name</string>
    <string name="discount">Discount</string>
    <string name="price">Price</string>
    <string name="quantity">Quantity</string>
    <string name="sold_quantity">Sold quantity</string>
    <string name="specification">Specification</string>
    <string name="available">Available</string>
    <string name="great_than">Greater than 0</string>

    <string name="note">Note</string>

    <string name="frag_blank">Select an item on the left to continue</string>

    <string name="language">Language:</string>
    <string name="products">Products</string>
    <string name="cart">Cart</string>
    <string name="comment_holder">What do you think about this product? Please share with us!\nThis is a public review and contains your information.</string>
</resources>